Separate finish into resolve/reject, update swagger and readme
