# docs/swagger.yaml
@@ -23,6 +23,8 @@ definitions:
         type: string
       formed_at:
         type: string
+      id:
+        type: integer
       light_request_to_lamp:
         items:
           $ref: '#/definitions/ds.LightRequestToLamp'
@@ -31,6 +33,8 @@ definitions:
         type: number
       status:
         description: 1 - draft, 2 - deleted, 3 - pending, 4 - resolved, 5 - rejected
+        type: integer
+      user_id:
         type: integer
     type: object
   ds.LightRequestToLamp:
@@ -71,13 +75,6 @@ definitions:
     - power_w
     - scattering_angle_deg
     - title
-    type: object
-  handler.FinishRequestRequest:
-    properties:
-      action:
-        type: string
-    required:
-    - action
     type: object
   handler.LoginRequest:
     properties:
@@ -732,55 +729,6 @@ paths:
       summary: Update light request
       tags:
       - light-requests
-  /light-requests/{id}/finish:
-    put:
-      consumes:
-      - application/json
-      description: Resolve or reject a light request with calculations (moderator
-        only)
-      parameters:
-      - description: Light Request ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Action data
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handler.FinishRequestRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "403":
-          description: Forbidden
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Finish light request
-      tags:
-      - light-requests
   /light-requests/{id}/form:
     put:
       consumes:
@@ -816,6 +764,84 @@ paths:
       security:
       - BearerAuth: []
       summary: Form light request
+      tags:
+      - light-requests
+  /light-requests/{id}/reject:
+    put:
+      consumes:
+      - application/json
+      description: Reject light request
+      parameters:
+      - description: Light Request ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Reject light request
+      tags:
+      - light-requests
+  /light-requests/{id}/resolve:
+    put:
+      consumes:
+      - application/json
+      description: Resolve light request with calculations (moderator only)
+      parameters:
+      - description: Light Request ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Resolve light request
       tags:
       - light-requests
   /light-requests/cart:
